tests/common/snapshots/e2e_tests__common__visual_testing__File Explorer__file_selected.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
┌ File Explorer ───────┐ [No Name]                                              
│▼ project_root        │    1 │                                                █
│  ▶ src               │~                                                      █
│    README.md         │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
│                      │~                                                      █
└──────────────────────┘~                                                      █
[No Name] | Ln 0, Col 0 | File explorer ready                   Palette: Ctrl+P
